# hpc-scaletest

./: README.md  __init__.py  my_first_test.py  my_test.py  requirements.txt  scaletest.py  usage_guide_guide.md
backends/builds/: autotools.py  cmake.py  easybuild.py  make.py  spack.py
backends/launchers/: mpirun.py  srun.py
backends/modules/: backend_modules.py  lmod.py  nomod.py  tmod.py  tmod4.py
backends/schedulers/: local.py  slurm.py
core/: __init__.py  abstracts.py  config.py  factory.py  test_definition.py  types.py
engine/: __init__.py  runner.py  scaling.py
examples/: complete_example.py  config.yaml  example_test.py
iPIC3D-CPU-SPACE-CoE/: .gitignore  CMakeLists.txt  LeXInt_Timer.hpp  README.md  Readme_H5hut.md  iPIC3D.cpp
iPIC3D-CPU-SPACE-CoE/H5hut-io/: CMakeLists.txt
iPIC3D-CPU-SPACE-CoE/H5hut-io/include/: H5hut-io.h
iPIC3D-CPU-SPACE-CoE/H5hut-io/src/: H5hut-io.cpp
iPIC3D-CPU-SPACE-CoE/communication/: Com3DNonblk.cpp  ComParser3D.cpp  VCtopology3D.cpp
iPIC3D-CPU-SPACE-CoE/fields/: EMfields3D.cpp  Moments.cpp
iPIC3D-CPU-SPACE-CoE/grids/: Grid3DCU.cpp
iPIC3D-CPU-SPACE-CoE/include/: Alloc.h  Basic.h  BlockCommunicator.h  Collective.h  Com3DNonblk.h  ComParser3D.h  EMfields3D.h  Grid3DCU.h  Moments.h  Neighbouring_Nodes.h  OutputWrapperFPP.h  PSKOutput.h  ParallelIO.h  Particle.h  Particles3D.h  Particles3Dcomm.h  arraysfwd.h  iPic3D.h  ipicmath.h
iPIC3D-CPU-SPACE-CoE/inputfiles/: Double_Harris.inp  Double_Harris_Nadja.inp  Firehose_Luca.inp  GEM3D.inp  KHI_Silvia.inp  Maxwell1D.inp  Maxwell2D.inp  Maxwell3D.inp  Relativistic_Double_Harris_ion_electron.inp  Relativistic_Double_Harris_pairs.inp  Relativistic_Filamentation.inp  Relativistic_Maxwell_Juttner.inp  Relativistic_Two_Stream.inp
iPIC3D-CPU-SPACE-CoE/inputoutput/: OutputWrapperFPP.cpp  ParallelIO.cpp  WriteOutputParallel.cpp  outputPrepare.cpp  phdf5.cpp
iPIC3D-CPU-SPACE-CoE/main/: Collective.cpp  iPIC3Dlib.cpp
iPIC3D-CPU-SPACE-CoE/particles/: Particles3D.cpp  Particles3Dcomm.cpp
iPIC3D-CPU-SPACE-CoE/performances/: Timing.cpp
iPIC3D-CPU-SPACE-CoE/postprocessing_tools/python/: Plot_B_2D.py  Plot_E_2D.py  Plot_J_2D.py  Plot_rho_2D.py  erase_restart.py
iPIC3D-CPU-SPACE-CoE/solvers/: GMRES.cpp
iPIC3D-CPU-SPACE-CoE/utility/: Basic.cpp  MPIdata.cpp  TimeTasks.cpp
tests/: test_backends.py  test_scaling.py
utils/: __init__.py  file_utils.py  logging_config.py
